# tetris

./: .gitmodules  CMakeLists.txt  readme.md
assets/shaders/: blocks.fs  blocks.vs  test.fs  test.vs  text.fs  text.vs
dependencies/: CMakeLists.txt
dependencies/glad/: CMakeLists.txt
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
src/: main.cpp  pch.h
src/game/: game_app.cpp  game_app.h
src/game/tetris/: block_renderer.cpp  block_renderer.h  blocks.cpp  blocks.h  board.cpp  board.h  renderer.cpp  renderer.h  tetromino.cpp  tetromino.h  text_renderer.cpp  text_renderer.h
src/system/: application.cpp  application.h  application_startup.cpp  file_utils.cpp  file_utils.h  font.cpp  font.h  input.cpp  input.h  logger.cpp  logger.h  render_device.cpp  render_device.h  window.cpp  window.h
src/system/graphics/: buffers.cpp  buffers.h  camera_orthographic.cpp  camera_orthographic.h  debug_utils.cpp  debug_utils.h  font_atlas.cpp  font_atlas.h  shader.cpp  shader.h  texture.cpp  texture.h
